--- a/app_thu_tien/pubspec.yaml
+++ b/app_thu_tien/pubspec.yaml
@@ -1,5 +1,5 @@
 name: app_thu_tien
-description: "App Thu Tiền"
+description: "Collect Money"
 publish_to: 'none'
 
 version: 1.0.0+1
@@ -11,9 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   url_strategy: ^0.3.0
-  flutter_native_splash: ^2.4.1
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.5.0
+  firebase_core: ^3.6.0
   get: ^4.6.6
   intl: ^0.19.0
   get_storage: ^2.1.1
@@ -21,6 +20,7 @@ dependencies:
   quickalert: ^1.1.0
   google_fonts: ^6.2.1
   loader_overlay: ^4.0.2+1
+  cloud_firestore: ^5.4.4
 
 dev_dependencies:
   flutter_test:
@@ -31,7 +31,6 @@ flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/logo.png"
-  min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
     image_path: "assets/logo.png"
