--- a/app_thu_tien/android/app/src/main/AndroidManifest.xml
+++ b/app_thu_tien/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
-        android:label="Collect Money"
+        android:label="Money Management"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
