--- a/app_thu_tien/ios/Runner/GoogleService-Info.plist
+++ b/app_thu_tien/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyCBQ1SZ94eX2QQhX3b9GMr3ZYNqlgTOwXw</string>
+	<string>AIzaSyBhmsSQklqS9tlQCP6o5DIbH-jn4pJaZbQ</string>
 	<key>GCM_SENDER_ID</key>
-	<string>1030920963113</string>
+	<string>609347119880</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>vn.plminhphu.thutien</string>
 	<key>PROJECT_ID</key>
-	<string>app-thu-tien-2</string>
+	<string>thutien-123</string>
 	<key>STORAGE_BUCKET</key>
-	<string>app-thu-tien-2.firebasestorage.app</string>
+	<string>thutien-123.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1030920963113:ios:9779b0174610d43b630838</string>
+	<string>1:609347119880:ios:793d7fe615c64462e31abd</string>
 </dict>
 </plist>
