--- a/app_thu_tien/pubspec.yaml
+++ b/app_thu_tien/pubspec.yaml
@@ -1,4 +1,4 @@
-name: app_thu_tien
+name: money_management
 description: "Money Management"
 publish_to: 'none'
 
@@ -26,6 +26,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.14.4
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 flutter:
   uses-material-design: true
