--- a/app_thu_tien/web/manifest.json
+++ b/app_thu_tien/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "app_thu_tien",
-    "short_name": "app_thu_tien",
+    "name": "money_management",
+    "short_name": "money_management",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#hexcode",
